# cally

./: .gitignore  setup.cfg
cally/: __main__.py  cally.py
