[metadata]
name = cally
version = 0.1
author = Devin J. Pohly
author_email = djpohly@gmail.com
description = Command-line interface to scheduling app
url = https://github.com/djpohly/cally
long_description = file: README.md
license = GPL

[options]
packages = find:
install_requires =
  click
  python-dateutil
  requests
  xdg

[options.entry_points]
console_scripts =
  cally = cally.cally:main
